# amm-risk-lab

./: .gitattributes  .gitignore  13892584.err  13892589.err  13892601.err  13893541.err  13896807.err  13896820.err  13896876.err  13904882.err  13904997.err  13928363.err  13928419.err  CMakeLists.txt  LICENSE  README.md  TODO  useful_commands.ipynb  useful_commands.txt
$HOME/course/sc_venv_template/: requirements.txt
include/: common.h  lp_simulation.h  lp_strategy.h  monte_carlo.h  pool_data_fetching.h  price_generation.h
include/PLV_model/: README.md  prediction.h
include/utils/: conversions.h  subgraph_utils.h  time_utils.h
python/: run_data_download.py
python/ml/PLV/: data_io.py  model.py
python/ml/PLV/models/: lstm_model_0.pt  lstm_model_volume_0.pt  transformer_model_liquidity_0.pt  transformer_pretrained_liquidity.pt  transformer_pretrained_liquidity_scalers.pkl  zero_inflated_lstm.pt
python/ml/PLV/models/gs_logs/: 13897487_gpu_434641.err
python/ml/PLV/scripts/: batch_run.sh  batch_run_data_download.sh  collect_best_gs_result.py  run_data_download.py  run_ddp_finetuning.py  run_ddp_gridsearch.py  run_ddp_pretraining.py  run_ddp_training.py  run_dist_gridsearch.py  run_gridsearch.py  run_model_test.py  run_testing.py  run_training.py  run_training_2.py
python/ml/PLV/scripts/lstm_runs/: batch_run_gs_liquidity.sh  batch_run_gs_volume.sh  batch_run_liquidity.sh  batch_run_volume.sh
python/ml/PLV/scripts/transformer_runs/: batch_run_ddp_gs_liquidity.sbatch  batch_run_ddp_liquidity_training.sbatch  batch_run_gs_liquidity.sbatch  batch_run_gs_liquidity.sh  batch_run_liquidity.sh  batch_run_volume.sh
python/ml/PLV/scripts/transformer_runs/liquidity/: batch_run_ddp_liquidity_finetuning.sbatch  batch_run_ddp_liquidity_pretraining.sbatch  batch_run_liquidity.sh  batch_run_liquidity_testing.sh
python/utils/: data_utils.py  distributed_utils.py  subgraph_utils.py
scripts/: display_pool_data.cpp  lstm_model_architecture  plv_model_prototype_1.ipynb  plv_model_prototype_2.ipynb  plv_model_prototype_3..ipynb  plv_model_prototype_3.ipynb  test_conversions.cpp  test_lp_strategy.cpp  test_prediction.cpp  test_price_generation.cpp
src/: common.cpp  lp_simulation.cpp  lp_strategy.cpp  monte_carlo.cpp  parameter_calibration.cpp  pool_data_fetching.cpp  price_generation.cpp
src/PLV_model/: CMakeLists.txt  README.md  prediction.cpp
src/utils/: conversions.cpp  subgraph_utils.cpp  time_utils.cpp
utils/: subgraph_ids.json  v3_pool_addresses.json
